# kis-auto-trader

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c564dbfb203_add_auto_trade_tables.py  53451fe485b8_add_scan_config_and_signal_outcomes.py  70ad53a17941_add_stop_loss_price_and_take_profit_.py  780878a6e8ee_initial_models.py
backend/app/: main.py
backend/app/api/: auth.py  auto_trade.py  health.py  safety.py  scan_config.py  strategy.py  trading.py
backend/app/core/: auth.py  config.py  database.py  kis_config.py  logging_config.py
backend/app/models/: __init__.py  auto_trade.py  execution.py  order.py  portfolio.py  scan_config.py  stock.py
backend/app/services/: auto_trader.py  balance_sync.py  execution_engine.py  kis_client.py  kis_market.py  kis_order.py  market_data.py  market_hours.py  notifier.py  order_service.py  provider_factory.py  safety.py  scan_config_service.py  scheduler.py  universe.py
backend/app/strategies/: backtest.py  base.py  golden_cross.py  indicators.py  momentum.py  runner.py  volume_breakout.py
backend/tests/: conftest.py  test_auth.py  test_auto_trade.py  test_health.py  test_kis_client.py  test_market_hours.py  test_models.py  test_notifier.py  test_paper_trading.py  test_safety.py  test_strategies.py  test_universe_tuning.py  test_volume_breakout.py
docs/: strategy-volume-breakout-retest.md
frontend/: Dockerfile  package-lock.json  (+1 more)
(+13 files in other folders)
