[project]
name = "kis-auto-trader"
version = "0.1.0"
description = "한국투자증권 Open API 기반 주식 자동매매 시스템"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]
